<resources>
    <string name="app_name">BissApp</string>
    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_qr_scanner">Qr scanner</string>
    <string name="title_qr_code">Qr code</string>
    <string name="title_settings">Settings</string>
    <string name="biss_card_system">BISS CARD SYSTEM</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">youremail@gmail.com</string>
    <string name="company_info">Company info</string>
    <string name="security">Security</string>
    <string name="balance">Balance</string>
    <string name="about">About</string>
    <string name="personal_info">Personal Information</string>
    <string name="upload_photo">Upload photo</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile">Mobile</string>
    <string name="items_selected">0 item selected</string>
    <string name="item_selected">item selected</string>
    <string name="no_selected_items">no selected items</string>
    <string name="available_cards">Available Cards</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="scan_count">You can scan the cards 30 times,and add</string>
    <string name="scan_count_continue">them to your contacts</string>
    <string name="pay">for every 30 pieces you have to </string>
    <string name="pay_continue">pay only 1 dollar</string>
    <string name="privacy">Your rights and privacy are protected</string>
    <string name="privacy_continue">by BissApp LLC</string>
    <string name="your_mobile_number">mobile number</string>
    <string name="your_email_address">email address</string>
    <string name="your_location">location</string>
    <string name="company_logo">Company Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
</resources>
